<resources>
    <string name="app_name">TimePop (과거의 오늘)</string>

    <!-- 메인 대시보드 UI -->
    <string name="main_header_title">과거의 오늘</string>
    <string name="main_header_subtitle">TimePop</string>
    <string name="main_greeting">안녕하세요, %1$s님!\n당신의 오늘을 발견해보세요.</string>
    <string name="main_loading">오늘의 역사를 불러오고 있습니다...</string>
    <string name="section_interest_match">당신의 관심사 맞춤 (#70%%)</string>
    <string name="section_new_discovery">당신의 새로운 발견 (#30%%)</string>

    <!-- 팝업 화면 UI -->
    <string name="popup_title">과거의 오늘</string>
    <string name="btn_scrap">스크랩하기</string>
    <string name="btn_learn_more">더 알아보기</string>

    <!-- 스크랩 보관함 UI -->
    <string name="scrap_title">나만의 상식 노트</string>
    <string name="filter_all">모두</string>
    <string name="filter_history">역사</string>
    <string name="filter_science">과학</string>
    <string name="filter_economy">경제</string>
    <string name="scrap_date_label">스크랩 날짜: %1$s</string>
    <string name="scrap_empty_msg">아직 스크랩한 사건이 없습니다.</string>

    <!-- 역사 아이템 포맷 -->
    <string name="history_item_format">%1$d: %2$s</string>

    <!-- 관심사 선택 화면 -->
    <string name="category_title">반가워요! 당신의 이름을 알려주세요</string>
    <string name="category_nickname_hint">닉네임 또는 이름</string>
    <string name="category_subtitle">선택하신 관심사에 따라\n오늘의 사건을 추천해 드립니다.</string>
    <!-- 관심사 선택 화면 세분화 -->
    <string name="category_war">전쟁/군사</string>
    <string name="category_people">위인/인물</string>
    <string name="category_politics">혁명/정치</string>
    <string name="category_ancient">고대/유적</string>
    <string name="category_space">우주/천문</string>
    <string name="category_nuclear">핵/에너지</string>
    <string name="category_it">IT/인공지능</string>
    <string name="category_medicine">의학/발견</string>
    <string name="category_music">음악/공연</string>
    <string name="category_movie">영화/엔터</string>
    <string name="category_art_design">미술/디자인</string>
    <string name="category_literature">문학/철학</string>
    <string name="category_sports_game">축구/야구/경기</string>
    <string name="category_olympic">올림픽</string>
    <string name="category_business">경제/비즈니스</string>

    <string name="category_btn_start">시작하기</string>
    <string name="category_error_nickname_empty">닉네임을 입력해 주세요.</string>
    <string name="category_select_at_least_one">최소 하나 이상의 관심사를 선택해 주세요.</string>

    <!-- 로그인 화면 -->
    <string name="login_title">반가워요!\n오늘을 기록해볼까요?</string>
    <string name="login_email_hint">이메일 주소</string>
    <string name="login_password_hint">비밀번호</string>
    <string name="login_password_confirm_hint">비밀번호 확인</string>
    <string name="login_btn_signin">로그인</string>
    <string name="login_no_account">계정이 없으신가요? </string>
    <string name="login_go_signup">회원가입</string>
    <string name="login_error_empty">이메일과 비밀번호를 모두 입력해주세요.</string>
    <string name="login_error_password_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="login_success">로그인 성공!</string>

    <!-- 회원가입 화면 -->
    <string name="signup_title">새로운 시작\n계정을 만들어보세요.</string>
    <string name="signup_btn_submit">회원가입 완료</string>
    <string name="signup_success">회원가입이 완료되었습니다!</string>
    <string name="signup_go_login">이미 계정이 있나요? 로그인</string>

    <!-- 설정 화면 UI -->
    <string name="settings_title">설정</string>
    <string name="settings_user_info_label">유저 정보</string>
    <string name="settings_nickname_label">닉네임</string>
    <string name="settings_interests_label">관심사</string>
    <string name="settings_btn_edit">정보 수정</string>
    <string name="settings_btn_logout">로그아웃</string>
    <string name="settings_logout_confirm">로그아웃 하시겠습니까?</string>

    <!-- 하단 네비게이션 -->
    <string name="nav_home">홈</string>
    <string name="nav_scrap">스크랩</string>
    <string name="nav_settings">설정</string>
</resources>